--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -4,6 +4,9 @@ $light-grey: #ccc;
 $black: #222;
 $white: #fff;
 $purple: #743C70;
+$light-purple: #BAA2B9;
+$light-grey: #F6F6F6;
+$green: #9BA33F;
 
 $text-color: $black;
 
