--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -82,9 +82,10 @@ h1 {
   width: 40px;
 
   &:before {
-    border: 1px solid $light-grey;
+    border: 0;
     display: inline-block;
     padding: 13px 11px;
+    font-size: 2em;
     height: 40px;
     width: 40px;
   }
@@ -173,6 +174,7 @@ body.noscript .navigation {
         color: $nav-color;
         text-align: center;
         background-color: $purple;
+
         &:hover {
         background-color: $light-purple;
         color: $text-color;
